BaSP-W02-2023: create readme

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -4,8 +4,8 @@
     </head>
     <body>
         <header>
-            <img src="/Assets/Logos/radiumrocketlogo.png" alt="radium rocket logo">
-            <a href="">MEGA ROCKET</a>
+            <img src="/Assets/Logos/radiumrocketlogo.png" alt="mega rocket logo">
+            <h1>MEGA ROCKET S.A.</h1>
             <button>
                 <a>Login</a>
                 <img src="/Assets/Logos/login-icon.png">
@@ -16,7 +16,6 @@
             </button>
         </header>
         <main>
-            <h1>MEGA ROCKET GYM</h1>
             <section>
                 <img src="/Assets/Images/dontsit2.png">
                 <h2>DON´T SIT GET FIT</h2>
@@ -58,7 +57,9 @@
                     <input type="email" placeholder="E-mail">
                     <label>Contact Reason</label>
                     <select>
-                        <option value=".">Choose One</option>
+                        <option value="costs">I want to know the memberships and costs</option>
+                        <option value="suggestion">I want to make a query or suggestion</option>
+                        <option value="claim">I want to make a claim</option>
                     </select>
                     <label>Message</label>
                     <textarea cols="30" rows="10" placeholder="Write here..."></textarea>
@@ -136,11 +137,11 @@
         </aside>
         <footer>
             <img src="/Assets/Logos/instagram-logo.png" alt="Instagram Logo">
-            <a href="#rocketgym">@ROCKETGYM</a>
+            <a href="https://www.instagram.com/">@ROCKETGYM</a>
             <img src="/Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
-            <a href="#">+1 408 741 2369</a>
+            <a href="https://www.whatsapp.com/?lang=es">+1 408 741 2369</a>
             <img src="/Assets/Logos/facebook-logo.png" alt="Facebook Logo">
-            <a href="#facebook">Mega Rocket GYM</a>
+            <a href="https://www.facebook.com/">Mega Rocket GYM</a>
             <p>MEGA ROCKET SA</p>
             <p>All rights reserved. 2023 &copy;</p>
         </footer>
