BaSP-W02-2023: adding assets an edit html

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -1,116 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Gym, Fitness, Crossfit, Spinning, Functional, Box, Health, Body">
         <title>Mega Rocket Gym</title>
     </head>
     <body>
         <header>
             <img src="/Assets/Logos/radiumrocketlogo.png" alt="mega rocket logo">
-            <h1>MEGA ROCKET S.A.</h1>
+            <h2>MEGA ROCKET S.A.</h2>
             <button>
                 <a>Login</a>
-                <img src="/Assets/Logos/login-icon.png">
+                <img src="/Assets/Logos/login-icon.png" alt="login icon">
             </button>
             <button>
                 <a>Sign Up</a>
-                <img src="/Assets/Logos/signup-icon.png">
+                <img src="/Assets/Logos/signup-icon.png" alt="sign up icon">
             </button>
         </header>
-        <main>
-            <section>
-                <img src="/Assets/Images/dontsit2.png">
-                <h2>DON´T SIT GET FIT</h2>
-                <p>Your best version is waiting for you, join Mega Rocket Gym today.</p>
-                <p>In this app you can choose our best personal trainers and the best classes </p>
-                <p>and have a bunch of privileges with our different memberships</p>
-            </section>
-            <section>
-                <h2>FEATURES</h2>
-                <section>
-                    <img src="/Assets/Images/reservations.png">
-                    <h3>RESERVATIONS</h3>
-                    <p>Choose your favorite class and ensure your place</p>
-                </section>
-                <section>
-                    <img src="/Assets/Images/schedule.jpg">
-                    <h3>SCHEDULE</h3>
-                    <p>Monday to saturday 08 am till 08 pm</p>
-                </section>
-                <section>
-                    <img src="/Assets/Images/membership.jpeg">
-                    <h3>MEMBERSHIPS</h3>
-                    <p>Pick which one is best for you</p>
-                </section>
-                <section>
-                    <img src="/Assets/Images/conttact-suggestions.png">
-                    <h3>CONTACT AND SUGGESTIONS</h3>
-                    <p>Your opinion is important to us, it helps us improve</p>
-                </section>
-            </section>
-            <section>
-                <h2>CONTACT US</h2>
-                <form action="#">
-                    <label>Name</label>
-                    <input type="text" placeholder="Name">
-                    <label>Surname</label>
-                    <input type="text" placeholder="Surname">
-                    <label>E-mail</label>
-                    <input type="email" placeholder="E-mail">
-                    <label>Contact Reason</label>
-                    <select>
-                        <option value="costs">I want to know the memberships and costs</option>
-                        <option value="suggestion">I want to make a query or suggestion</option>
-                        <option value="claim">I want to make a claim</option>
-                    </select>
-                    <label>Message</label>
-                    <textarea cols="30" rows="10" placeholder="Write here..."></textarea>
-                    <input type="submit" value="Send">
-                </form>
-            </section>
-            <section>
-                <h2>ACTIVITIES</h2>
-                <img src="/Assets/Images/crossfit.jpg" alt="Crossfit image">
-                <H3>Crossfit</H3>
-                <img src="/Assets/Images/boxing.png" alt="Boxing image">
-                <h3>BOX</h3>
-                <img src="/Assets/Images/functional.jpeg" alt="Functional image">
-                <h3>FUNCTIONAL</h3>
-                <img src="/Assets/Images/spinning.png" alt="spinning image">
-                <h3>SPINNING</h3>
-                <img src="/Assets/Images/fitness.jpg" alt="Fitness image">
-                <h3>FITNESS</h3>
-            </section>
-            <section>
-                <h2>MEMBERSHIPS</h2>
-                <section>
-                    <img src="/Assets/Images/only-classes.png">
-                    <h3>ONLY CLASSES MEMBERSHIP</h3>
-                    <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
-                    <p>SCHEDULE VIEW</p>
-                </section>
-                <section>
-                    <img src="/Assets/Images/classic.png">
-                    <h3>CLASSIC MEMBERSHIP</h3>
-                    <p>FREE ACCESS TO THE GYM</p>
-                    <p>PERSONALIZED MONITORING & COACHING</p>
-                    <p>SCHEDULE VIEW</p>
-                </section>
-                <section>
-                    <img src="/Assets/Images/black.jpg">
-                    <h3>BLACK MEMBERSHIP</h3>
-                    <p>FREE ACCESS TO THE GYM</p>
-                    <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
-                    <p>PERSONALIZED MONITORING & COACHING</p>
-                    <p>SCHEDULE VIEW</p>
-                </section>
-            </section>
-            <section>
-                <h2>OUR STORY</h2>
-                <article>
-                    <p>We are one of the oldest but most modern gyms. 50 trainers work in MR GYM and more than 200 people come to our place everyday.</p>
-                    <p>We are dedicated to helping you improve your quality of life in a fun and active way</p>
-                </article>
-            </section>
-        </main>
         <aside>
             <nav>
                 <ul>
@@ -133,17 +42,162 @@
                         <a href="#our-story">OUR STORY</a>
                     </li>
                 </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <img src="/Assets/Logos/mapa.png" alt="map icon">
+                            <p>Av. Pellegrini  3535</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="/Assets/Logos/ring-phone.png" alt="phone icon">
+                            <p>+464 206 96</p>
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </aside>
+        <main>
+            <section id="home">
+                <img src="/Assets/Images/dontsit2.png" alt="dont sit image">
+                <h1>DON´T SIT GET FIT</h1>
+                <article>
+                    <p>Your best version is waiting for you, join Mega Rocket Gym today.</p>
+                    <p>In this app you can choose our best personal trainers and the best classes </p>
+                    <p>and have a bunch of privileges with our different memberships</p>
+                </article>
+            </section>
+            <section id="features">
+                <h2>FEATURES</h2>
+                <article>
+                    <img src="/Assets/Images/reservations.png" alt="reservation image">
+                    <h3>RESERVATIONS</h3>
+                    <p>Choose your favorite class and ensure your place</p>
+                </article>
+                <article>
+                    <img src="/Assets/Images/schedule.jpg" alt="schedule image">
+                    <h3>SCHEDULE</h3>
+                    <p>Monday to saturday 08 am till 08 pm</p>
+                </article>
+                <article>
+                    <img src="/Assets/Images/membership.jpeg" alt="membreship image">
+                    <h3>MEMBERSHIPS</h3>
+                    <p>Pick which one is best for you</p>
+                </article>
+                <article>
+                    <img src="/Assets/Images/conttact-suggestions.png" alt="contact image">
+                    <h3>CONTACT AND SUGGESTIONS</h3>
+                    <p>Your opinion is important to us, it helps us improve</p>
+                </article>
+            </section>
+            <section id="contact-us">
+                <h2>CONTACT US</h2>
+                <form action="#">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Name">
+                    <label for="surname">Surname</label>
+                    <input type="text" id="surname" placeholder="Surname">
+                    <label for="e-mail">E-mail</label>
+                    <input type="email" id="e-mail" placeholder="E-mail">
+                    <label for="reason">Contact Reason</label>
+                    <select id="reason">
+                        <option value="">Choose one</option>
+                        <option value="costs">I want to know the memberships and costs</option>
+                        <option value="suggestion">I want to make a query or suggestion</option>
+                        <option value="claim">I want to make a claim</option>
+                    </select>
+                    <label for="message">Message</label>
+                    <textarea cols="30" rows="10" id="message" placeholder="Write here..."></textarea>
+                    <button type="submit">Send</button>
+                </form>
+            </section>
+            <section id="activities">
+                <h2>ACTIVITIES</h2>
+                <ul>
+                    <li>
+                        <img src="/Assets/Images/crossfit.jpg" alt="Crossfit image">
+                        <h3>Crossfit</h3>
+                    </li>
+                    <li>
+                        <img src="/Assets/Images/boxing.png" alt="Boxing image">
+                        <h3>BOX</h3>
+                    </li>
+                    <li>
+                        <img src="/Assets/Images/functional.jpeg" alt="Functional image">
+                        <h3>FUNCTIONAL</h3>
+                    </li>
+                    <li>
+                        <img src="/Assets/Images/spinning.png" alt="spinning image">
+                        <h3>SPINNING</h3>
+                    </li>
+                    <li>
+                        <img src="/Assets/Images/fitness.jpg" alt="Fitness image">
+                        <h3>FITNESS</h3>
+                    </li>
+                </ul>
+            </section>
+            <section id="memberships">
+                <h2>MEMBERSHIPS</h2>
+                <article>
+                    <img src="/Assets/Images/only-classes.png" alt="only classes image">
+                    <h3>ONLY CLASSES MEMBERSHIP</h3>
+                    <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
+                    <p>SCHEDULE VIEW</p>
+                </article>
+                <article>
+                    <img src="/Assets/Images/classic.png" alt="classic membership image">
+                    <h3>CLASSIC MEMBERSHIP</h3>
+                    <p>FREE ACCESS TO THE GYM</p>
+                    <p>PERSONALIZED MONITORING & COACHING</p>
+                    <p>SCHEDULE VIEW</p>
+                </article>
+                <article>
+                    <img src="/Assets/Images/black.jpg" alt="black membership image">
+                    <h3>BLACK MEMBERSHIP</h3>
+                    <p>FREE ACCESS TO THE GYM</p>
+                    <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
+                    <p>PERSONALIZED MONITORING & COACHING</p>
+                    <p>SCHEDULE VIEW</p>
+                </article>
+            </section>
+            <section id="our-story">
+                <h2>OUR STORY</h2>
+                <article>
+                    <p>We are one of the oldest but most modern gyms. 50 trainers work in MR GYM and more than 200 people come to our place everyday.</p>
+                    <p>We are dedicated to helping you improve your quality of life in a fun and active way</p>
+                </article>
+            </section>
+        </main>
         <footer>
-            <img src="/Assets/Logos/instagram-logo.png" alt="Instagram Logo">
-            <a href="https://www.instagram.com/">@ROCKETGYM</a>
-            <img src="/Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
-            <a href="https://www.whatsapp.com/?lang=es">+1 408 741 2369</a>
-            <img src="/Assets/Logos/facebook-logo.png" alt="Facebook Logo">
-            <a href="https://www.facebook.com/">Mega Rocket GYM</a>
-            <p>MEGA ROCKET SA</p>
-            <p>All rights reserved. 2023 &copy;</p>
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com/">
+                        <img src="/Assets/Logos/instagram-logo.png" alt="Instagram Logo">
+                        <p>@ROCKETGYM</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.whatsapp.com/?lang=es">
+                        <img src="/Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
+                        <p>+1 408 741 2369</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/">
+                        <img src="/Assets/Logos/facebook-logo.png" alt="Facebook Logo">
+                        <p>Mega Rocket GYM</p>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>MEGA ROCKET SA</p>
+                </li>
+                <li>
+                    <p>All rights reserved. 2023 &copy;</p>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
