--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -9,15 +9,15 @@
     </head>
     <body>
         <header>
-            <img src="/Assets/Logos/radiumrocketlogo.png" alt="mega rocket logo">
+            <img src="./Assets/Logos/radiumrocketlogo.png" alt="mega rocket logo">
             <h2>MEGA ROCKET S.A.</h2>
             <button>
                 <a>Login</a>
-                <img src="/Assets/Logos/login-icon.png" alt="login icon">
+                <img src="./Assets/Logos/login-icon.png" alt="login icon">
             </button>
             <button>
                 <a>Sign Up</a>
-                <img src="/Assets/Logos/signup-icon.png" alt="sign up icon">
+                <img src="./Assets/Logos/signup-icon.png" alt="sign up icon">
             </button>
         </header>
         <aside>
@@ -45,13 +45,13 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="/Assets/Logos/mapa.png" alt="map icon">
+                            <img src="./Assets/Logos/mapa.png" alt="map icon">
                             <p>Av. Pellegrini  3535</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <img src="/Assets/Logos/ring-phone.png" alt="phone icon">
+                            <img src="./Assets/Logos/ring-phone.png" alt="phone icon">
                             <p>+464 206 96</p>
                         </a>
                     </li>
@@ -60,7 +60,7 @@
         </aside>
         <main>
             <section id="home">
-                <img src="/Assets/Images/dontsit2.png" alt="dont sit image">
+                <img src="./Assets/Images/dontsit2.png" alt="dont sit image">
                 <h1>DON´T SIT GET FIT</h1>
                 <article>
                     <p>Your best version is waiting for you, join Mega Rocket Gym today.</p>
@@ -71,22 +71,22 @@
             <section id="features">
                 <h2>FEATURES</h2>
                 <article>
-                    <img src="/Assets/Images/reservations.png" alt="reservation image">
+                    <img src="./Assets/Images/reservations.png" alt="reservation image">
                     <h3>RESERVATIONS</h3>
                     <p>Choose your favorite class and ensure your place</p>
                 </article>
                 <article>
-                    <img src="/Assets/Images/schedule.jpg" alt="schedule image">
+                    <img src="./Assets/Images/schedule.jpg" alt="schedule image">
                     <h3>SCHEDULE</h3>
                     <p>Monday to saturday 08 am till 08 pm</p>
                 </article>
                 <article>
-                    <img src="/Assets/Images/membership.jpeg" alt="membreship image">
+                    <img src="./Assets/Images/membership.jpeg" alt="membreship image">
                     <h3>MEMBERSHIPS</h3>
                     <p>Pick which one is best for you</p>
                 </article>
                 <article>
-                    <img src="/Assets/Images/conttact-suggestions.png" alt="contact image">
+                    <img src="./Assets/Images/conttact-suggestions.png" alt="contact image">
                     <h3>CONTACT AND SUGGESTIONS</h3>
                     <p>Your opinion is important to us, it helps us improve</p>
                 </article>
@@ -116,23 +116,23 @@
                 <h2>ACTIVITIES</h2>
                 <ul>
                     <li>
-                        <img src="/Assets/Images/crossfit.jpg" alt="Crossfit image">
+                        <img src="./Assets/Images/crossfit.jpg" alt="Crossfit image">
                         <h3>Crossfit</h3>
                     </li>
                     <li>
-                        <img src="/Assets/Images/boxing.png" alt="Boxing image">
+                        <img src="./Assets/Images/boxing.png" alt="Boxing image">
                         <h3>BOX</h3>
                     </li>
                     <li>
-                        <img src="/Assets/Images/functional.jpeg" alt="Functional image">
+                        <img src="./Assets/Images/functional.jpeg" alt="Functional image">
                         <h3>FUNCTIONAL</h3>
                     </li>
                     <li>
-                        <img src="/Assets/Images/spinning.png" alt="spinning image">
+                        <img src="./Assets/Images/spinning.png" alt="spinning image">
                         <h3>SPINNING</h3>
                     </li>
                     <li>
-                        <img src="/Assets/Images/fitness.jpg" alt="Fitness image">
+                        <img src="./Assets/Images/fitness.jpg" alt="Fitness image">
                         <h3>FITNESS</h3>
                     </li>
                 </ul>
@@ -140,20 +140,20 @@
             <section id="memberships">
                 <h2>MEMBERSHIPS</h2>
                 <article>
-                    <img src="/Assets/Images/only-classes.png" alt="only classes image">
+                    <img src="./Assets/Images/only-classes.png" alt="only classes image">
                     <h3>ONLY CLASSES MEMBERSHIP</h3>
                     <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
                     <p>SCHEDULE VIEW</p>
                 </article>
                 <article>
-                    <img src="/Assets/Images/classic.png" alt="classic membership image">
+                    <img src="./Assets/Images/classic.png" alt="classic membership image">
                     <h3>CLASSIC MEMBERSHIP</h3>
                     <p>FREE ACCESS TO THE GYM</p>
                     <p>PERSONALIZED MONITORING & COACHING</p>
                     <p>SCHEDULE VIEW</p>
                 </article>
                 <article>
-                    <img src="/Assets/Images/black.jpg" alt="black membership image">
+                    <img src="./Assets/Images/black.jpg" alt="black membership image">
                     <h3>BLACK MEMBERSHIP</h3>
                     <p>FREE ACCESS TO THE GYM</p>
                     <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
@@ -173,19 +173,19 @@
             <ul>
                 <li>
                     <a href="https://www.instagram.com/">
-                        <img src="/Assets/Logos/instagram-logo.png" alt="Instagram Logo">
+                        <img src="./Assets/Logos/instagram-logo.png" alt="Instagram Logo">
                         <p>@ROCKETGYM</p>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.whatsapp.com/?lang=es">
-                        <img src="/Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
+                        <img src="./Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
                         <p>+1 408 741 2369</p>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/">
-                        <img src="/Assets/Logos/facebook-logo.png" alt="Facebook Logo">
+                        <img src="./Assets/Logos/facebook-logo.png" alt="Facebook Logo">
                         <p>Mega Rocket GYM</p>
                     </a>
                 </li>
