BaSP-W02-2023: final fix images routes

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -45,7 +45,7 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <img src="./Assets/Logos/mapa.png" alt="map icon">
+                            <img src="../Assets/Logos/mapa.png" alt="map icon">
                             <p>Av. Pellegrini  3535</p>
                         </a>
                     </li>
