BaSP-W02-2023: Edit Readme and adding assets

--- a/Week-02/index.html
+++ b/Week-02/index.html
@@ -42,6 +42,8 @@
                         <a href="#our-story">OUR STORY</a>
                     </li>
                 </ul>
+            </nav>
+            <article>
                 <ul>
                     <li>
                         <a href="#">
@@ -56,7 +58,7 @@
                         </a>
                     </li>
                 </ul>
-            </nav>
+            </article>
         </aside>
         <main>
             <section id="home">
@@ -149,7 +151,7 @@
                     <img src="../Assets/Images/classic.png" alt="classic membership image">
                     <h3>CLASSIC MEMBERSHIP</h3>
                     <p>FREE ACCESS TO THE GYM</p>
-                    <p>PERSONALIZED MONITORING & COACHING</p>
+                    <p>PERSONALIZED MONITORING &amp; COACHING</p>
                     <p>SCHEDULE VIEW</p>
                 </article>
                 <article>
@@ -157,7 +159,7 @@
                     <h3>BLACK MEMBERSHIP</h3>
                     <p>FREE ACCESS TO THE GYM</p>
                     <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
-                    <p>PERSONALIZED MONITORING & COACHING</p>
+                    <p>PERSONALIZED MONITORING &amp; COACHING</p>
                     <p>SCHEDULE VIEW</p>
                 </article>
             </section>
