BaSP-W03-2023: fixing buttons and images

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -104,26 +104,28 @@
             <section id="contact-us">
                 <h2 class="section-title">CONTACT<span>US</span></h2>
                 <form id="contact-form" action="#">
-                    <fieldset>
-                        <p>Name</p>
-                        <input type="text" id="name" placeholder="Name">
-                    </fieldset>
-                    <fieldset>
-                        <p>Surname</p>
-                        <input type="text" id="surname" placeholder="Surname">
-                    </fieldset>
-                    <fieldset>
-                        <p>E-mail</p>
-                        <input type="email" id="e-mail" placeholder="E-mail">
-                    </fieldset>
-                    <fieldset>
-                        <p>Contact Reason</p>
-                        <select id="reason">
-                            <option value="">Choose one</option>
-                            <option value="costs">I want to know the memberships and costs</option>
-                            <option value="suggestion">I want to make a query or suggestion</option>
-                            <option value="claim">I want to make a claim</option>
-                    </fieldset>
+                    <div class="form-up">
+                        <fieldset>
+                            <p>Name</p>
+                            <input type="text" id="name" placeholder="Name">
+                        </fieldset>
+                        <fieldset>
+                            <p>Surname</p>
+                            <input type="text" id="surname" placeholder="Surname">
+                        </fieldset>
+                        <fieldset>
+                            <p>E-mail</p>
+                            <input type="email" id="e-mail" placeholder="E-mail">
+                        </fieldset>
+                        <fieldset>
+                            <p>Contact Reason</p>
+                            <select id="reason">
+                                <option value="">Choose one</option>
+                                <option value="costs">I want to know the memberships and costs</option>
+                                <option value="suggestion">I want to make a query or suggestion</option>
+                                <option value="claim">I want to make a claim</option>
+                        </fieldset>
+                    </div>
                     </select>
                     <label for="message">Message</label>
                     <textarea cols="30" rows="10" id="message" placeholder="Write here..."></textarea>
