BaSP-W03-2023: fixing form and finishig style

--- a/Week-03/index.html
+++ b/Week-03/index.html
@@ -19,11 +19,11 @@
                 <h1>MEGA ROCKET S.A.</h1>
             </div>
             <div class="header-buttons">
-                <a class="button-container">
+                <a href="#" class="button-container">
                     Login
                     <img src="../Assets/Logos/login-icon.png" alt="login icon">
                 </a>
-                <a class="button-container">
+                <a href="#" class="button-container">
                     Sign Up
                     <img src="../Assets/Logos/signup-icon.png" alt="sign up icon">
                 </a>
@@ -83,19 +83,19 @@
             <section id="features">
                 <h2 class="section-title">FEATU<span>RES</span></h2>
                 <div class="features-card-container">
-                    <article class="features-card" id="features-reservations">
+                    <article class="features-card">
                         <h3>RESERVATIONS</h3>
                         <p>Choose your favorite class and ensure your place</p>
                     </article>
-                    <article class="features-card" id="features-schedule">
+                    <article class="features-card">
                         <h3>SCHEDULE</h3>
                         <p>Monday to saturday 08 am till 08 pm</p>
                     </article>
-                    <article class="features-card" id="features-memberships">
+                    <article class="features-card">
                         <h3>MEMBERSHIPS</h3>
                         <p>Pick which one is best for you</p>
                     </article>
-                    <article class="features-card" id="features-contact">
+                    <article class="features-card">
                         <h3>CONTACT AND SUGGESTIONS</h3>
                         <p>Your opinion is important to us, it helps us improve</p>
                     </article>
@@ -124,32 +124,34 @@
                                 <option value="costs">I want to know the memberships and costs</option>
                                 <option value="suggestion">I want to make a query or suggestion</option>
                                 <option value="claim">I want to make a claim</option>
+                            </select>
                         </fieldset>
                     </div>
-                    </select>
-                    <label for="message">Message</label>
-                    <textarea cols="30" rows="10" id="message" placeholder="Write here..."></textarea>
-                    <button type="submit">Send</button>
+                    <div class="form-down">
+                        <p>Message</p>
+                        <textarea cols="30" rows="10" id="message" placeholder="Write here..."></textarea>
+                        <button type="submit">Send</button>
+                    </div>
                 </form>
             </section>
             <section id="activities">
                 <h2 class="section-title">ACTIVI<span>TIES</span></h2>
                 <ul id="activities-1">
-                    <li id="crossfit">
+                    <li>
                         <h3>CROSSFIT</h3>
                     </li>
-                    <li id="box">
+                    <li>
                         <h3>BOX</h3>
                     </li>
                 </ul>
                 <ul id="activities-2">
-                    <li id="functional">
+                    <li>
                         <h3>FUNCTIONAL</h3>
                     </li>
-                    <li id="spinning">
+                    <li>
                         <h3>SPINNING</h3>
                     </li>
-                    <li id="fitness">
+                    <li>
                         <h3>FITNESS</h3>
                     </li>
                 </ul>
@@ -157,18 +159,18 @@
             <section id="memberships">
                 <h2 class="section-title">MEMBER<span>SHIPS</span></h2>
                 <div id="memberships-card-container">
-                    <article class="memberships-card" id="only-classes">
+                    <article class="memberships-card">
                         <h3>ONLY CLASSES MEMBERSHIP</h3>
                         <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
                         <p>SCHEDULE VIEW</p>
                     </article>
-                    <article class="memberships-card" id="classic">
+                    <article class="memberships-card">
                         <h3>CLASSIC MEMBERSHIP</h3>
                         <p>FREE ACCESS TO THE GYM</p>
                         <p>PERSONALIZED MONITORING &amp; COACHING</p>
                         <p>SCHEDULE VIEW</p>
                     </article>
-                    <article class="memberships-card" id="black">
+                    <article class="memberships-card">
                         <h3>BLACK MEMBERSHIP</h3>
                         <p>FREE ACCESS TO THE GYM</p>
                         <p>FREE ACCESS TO CLASSES WITH REGISTRATION</p>
