BaSP-W04-2023: styling main and aside

--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" type="image/x-icon" href="../Assets/Logos/favicon.ico">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/common.css">
         <link rel="stylesheet" href="./css/header.css">
@@ -80,11 +81,11 @@
                 <section id="home">
                     <div id="home-container">
                         <h2>DON´T SIT<span>GET FIT</span></h2>
-                        <div>
-                            <p>Your best version is waiting for you, join Mega Rocket Gym today.</p>
-                            <p>In this app you can choose our best personal trainers and the best classes </p>
-                            <p>and have a bunch of privileges with our different memberships</p>
-                        </div>
+                    </div>
+                    <div id="home-text">
+                        <p>Your best version is waiting for you, join Mega Rocket Gym today.</p>
+                        <p>In this app you can choose our best personal trainers and the best classes </p>
+                        <p>and have a bunch of privileges with our different memberships</p>
                     </div>
                 </section>
                 <section id="features">
@@ -98,6 +99,8 @@
                             <h3>SCHEDULE</h3>
                             <p>Monday to saturday 08 am till 08 pm</p>
                         </article>
+                    </div>   
+                    <div class="features-card-container">
                         <article class="features-card">
                             <h3>MEMBERSHIPS</h3>
                             <p>Pick which one is best for you</p>
