--- a/Week-04/index.html
+++ b/Week-04/index.html
@@ -60,22 +60,6 @@
                         </li>
                     </ul>
                 </nav>
-                <article>
-                    <ul>
-                        <li>
-                            <a href="#">
-                                <img src="../Assets/Logos/mapa.png" alt="map icon">
-                                <p>Av. Pellegrini  3535</p>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="../Assets/Logos/ring-phone.png" alt="phone icon">
-                                <p>+464 206 96</p>
-                            </a>
-                        </li>
-                    </ul>
-                </article>
             </aside>
             <div class="main-container">
                 <section id="home">
@@ -189,7 +173,7 @@
                 </section>
                 <section id="our-story">
                     <div>
-                        <h2>OUR<span>STORY</span></h2>
+                        <h2 class="section-title" >OUR<span>STORY</span></h2>
                     </div>
                     <article>
                         <p>We are one of the oldest but most modern gyms. 50 trainers work in MR GYM and more than 200 people come to our place everyday.</p>
@@ -202,20 +186,34 @@
             <ul id="footer-icons-left">
                 <li>
                     <a href="https://www.instagram.com/">
+                        @ROCKETGYM
                         <img src="../Assets/Logos/instagram-logo.png" alt="Instagram Logo">
-                        <p>@ROCKETGYM</p>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.whatsapp.com/?lang=es">
+                        +1 408 741 2369
                         <img src="../Assets/Logos/whatsapp-logo.png" alt="Whatsapp Logo">
-                        <p>+1 408 741 2369</p>
                     </a>
                 </li>
                 <li>
                     <a href="https://www.facebook.com/">
+                        Mega Rocket GYM
                         <img src="../Assets/Logos/facebook-logo.png" alt="Facebook Logo">
-                        <p>Mega Rocket GYM</p>
+                    </a>
+                </li>
+            </ul>
+            <ul id="footer-center">
+                <li>
+                    <a href="#">
+                        Av. Pellegrini  3535
+                        <img src="../Assets/Logos/mapa.png" alt="map icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        +464 206 96
+                        <img src="../Assets/Logos/ring-phone.png" alt="phone icon">
                     </a>
                 </li>
             </ul>
